# understanding-langchain

./: README.md  main.py  main2.py  pyproject.toml  test_prompt.py  test_qa.py
test_docs/: langchain_intro.txt  python_basics.txt
